<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_read"
        android:title="@string/toolbar_menu_add_read" />

    <item
        android:id="@+id/menu_add_collection"
        android:title="@string/toolbar_menu_add_collection" />

    <item
        android:id="@+id/menu_change_font_size"
        android:title="@string/toolbar_menu_change_font_size" />

    <item
        android:id="@+id/menu_open_voice_broadcast"
        android:title="@string/toolbar_menu_voice_broadcast" />

    <item
        android:id="@+id/menu_view_original"
        android:title="@string/toolbar_menu_view_original" />

    <item
        android:id="@+id/menu_copy_link"
        android:title="@string/toolbar_menu_copy_link" />
</menu>