<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/toolbar_more_chinese"
        android:title="@string/toolbar_more_chinese" />

    <item
        android:id="@+id/toolbar_more_english"
        android:title="@string/toolbar_more_english" />

    <item
        android:id="@+id/toolbar_more_mix"
        android:title="@string/toolbar_more_mix" />

    <item
        android:id="@+id/toolbar_more_recommend_settings"
        android:title="@string/toolbar_more_recommend_settings" />

    <item
        android:id="@+id/toolbar_more_custom_channel"
        android:title="@string/toolbar_more_custom_channel" />

    <item
        android:id="@+id/toolbar_more_week_list"
        android:title="@string/toolbar_more_week_list" />
</menu>