<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="myVM"
            type="com.minerva.business.mine.MyViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_EEEEEE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                onClick="@{myVM::goLogin}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingTop="@dimen/nav_dimen_size_10dp"
                android:paddingBottom="@dimen/nav_dimen_size_10dp">

                <ImageView
                    android:layout_width="@dimen/nav_dimen_size_50dp"
                    android:layout_height="@dimen/nav_dimen_size_50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/nav_dimen_size_20dp"
                    android:src="@drawable/icon_menu_user" />

                <TextView
                    text="@{myVM.userName}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/nav_dimen_size_10dp"
                    android:textColor="@color/color_000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::goUnRead}"
                android:layout_marginTop="@dimen/nav_dimen_size_15dp"
                android:text="@string/mine_to_be_read" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::goCollection}"
                android:text="@string/mine_collection" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::goJournal}"
                android:text="@string/mine_journal" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::goNotification}"
                android:text="@string/mine_notification" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::goHistory}"
                android:text="@string/mine_read_history" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::switchModel}"
                android:layout_marginTop="@dimen/nav_dimen_size_15dp"
                android:text="@string/mine_night_mode" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::readOffline}"
                android:text="@string/mine_offline_read" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::checkUpgrade}"
                android:text="@string/mine_upgrade" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::goFeedback}"
                android:text="@string/mine_feedback" />

            <TextView
                style="@style/mineItemStyle"
                onClick="@{myVM::aboutUs}"
                android:text="@string/mine_about_us" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>