<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="groupMenuVM"
            type="com.minerva.business.site.menu.GroupMenuViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_button_white"
        android:orientation="vertical"
        android:padding="@dimen/nav_dimen_size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_option"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            isGone="@{groupMenuVM.isEditMenuGone}"
            onClick="@{groupMenuVM::onEditClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_dimen_size_5dp"
            android:layout_marginTop="@dimen/nav_dimen_size_10dp"
            android:text="@string/menu_edit_group_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            onClick="@{groupMenuVM::onDeleteClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_dimen_size_5dp"
            android:layout_marginTop="@dimen/nav_dimen_size_10dp"
            android:text="@string/menu_delete_group"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            onClick="@{groupMenuVM::onTransferClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_dimen_size_5dp"
            android:layout_marginTop="@dimen/nav_dimen_size_10dp"
            android:text="@string/menu_move_subscribe"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            onClick="@{groupMenuVM::onMarkAllClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_dimen_size_5dp"
            android:layout_marginTop="@dimen/nav_dimen_size_10dp"
            android:text="@string/toolbar_all_read"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

</layout>