<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="childMenuVM"
            type="com.minerva.business.site.menu.ChildMenuViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_button_white"
        android:orientation="vertical"
        android:padding="@dimen/nav_dimen_size_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_option"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            onClick="@{childMenuVM::onMoveClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_dimen_size_5dp"
            android:layout_marginTop="@dimen/nav_dimen_size_10dp"
            android:text="@string/menu_move_group"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            onClick="@{childMenuVM::onUnsubscribeClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_dimen_size_5dp"
            android:layout_marginTop="@dimen/nav_dimen_size_10dp"
            android:text="@string/menu_unsubscribe"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>
</layout>